--- a/apps/back/enlamesa/src/main/resources/application.properties
+++ b/apps/back/enlamesa/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/enlamesa?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+
+
+#spring security
+enlamesa.api.jwt.secret.key=Castellana_171
